--- a/config/config-prod.toml
+++ b/config/config-prod.toml
@@ -19,3 +19,7 @@
         Path   = "/tmp/log/bazinga/sql"
         Level  = "all"
         Stdout = true
+
+# Redis
+[redis]
+    default = "106.54.212.69:6379,0"
