--- a/config/config-dev.toml
+++ b/config/config-dev.toml
@@ -19,7 +19,7 @@
 
 # Database.
 [database]
-    link  = "mysql:root:123456@tcp(127.0.0.1:3306)/test"
+    link  = "mysql:root:123456@tcp(127.0.0.1:3306)/bazinga"
     debug = true
     # Database logger.
     [database.logger]
